fixes scrollbar bug

--- a/editor/src/main/resources/gui/editorField.css
+++ b/editor/src/main/resources/gui/editorField.css
@@ -11,6 +11,7 @@ body {
     top: -5px;
     bottom: -5px;
     right: -5px;
+    left: 0px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
